complete working of footer

--- a/main/about.html
+++ b/main/about.html
@@ -93,7 +93,7 @@
 
               <div class="card">
                 <img src="assets/images/about/desktop/avatar-thompson.jpg" alt="face of Thompson" class="card__img width-100%">
-                <h3 class="margin-top-lg">Jake Richards</h3>
+                <h3 class="margin-top-lg">Thompson Smith</h3>
                 <p class="card__role">Head of Finance</p>
                 <div class="social">
                   <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
@@ -103,7 +103,7 @@
 
               <div class="card">
                 <img src="assets/images/about/desktop/avatar-jackson.jpg" alt="face of Jackson" class="card__img width-100%">
-                <h3 class="margin-top-lg">Jake Richards</h3>
+                <h3 class="margin-top-lg">Jackson Rourke</h3>
                 <p class="card__role">Lead Designer</p>
                 <div class="social">
                   <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
@@ -113,7 +113,7 @@
 
               <div class="card">
                 <img src="assets/images/about/desktop/avatar-maria.jpg" alt="face of maria" class="card__img width-100%">
-                <h3 class="margin-top-lg">Jake Richards</h3>
+                <h3 class="margin-top-lg">Maria Simpson</h3>
                 <p class="card__role">Senior Architect</p>
                 <div class="social">
                   <a href="linkedin.com"><img src="assets/images/icons/icon-linkedin.svg" alt="linkedin icon"></a>
@@ -128,21 +128,23 @@
     </div>
   </main>
 
-  <!-- <div class="container-outer">
-    <footer class="footer full-width col-content@md">
-      <div class="footer__container">
-        <div class="footer__logo">
-          <img src="assets/images/logo.svg" alt="logo white">
+
+    <footer class="footer">
+      <div class="container container--outer container--outer--full-width container-width@md position-relative">
+        <div class="footer__main">
+          <div class="footer__logo">
+            <img src="assets/images/logo.svg" alt="logo white">
+          </div>
+          <nav class="footer__nav">
+            <a href="portfolio.html" class="nav-link">Portfolio</a>
+            <a href="about.html" class="nav-link">About Us</a>
+            <a href="contact.html" class="nav-link">contact</a>
+          </nav>
+          <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
         </div>
-        <nav class="footer__nav">
-          <a href="portfolio.html" class="nav-link">Portfolio</a>
-          <a href="about.html" class="nav-link">About Us</a>
-          <a href="contact.html" class="nav-link">contact</a>
-        </nav>
-        <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
       </div>
     </footer>
-  </div> -->
+
 
   <script src="assets/js/scripts.js"></script>
   </body>
