grid works perfectly for slides

--- a/main/index.html
+++ b/main/index.html
@@ -40,7 +40,7 @@
                   <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
                     srcset="assets/images/home/desktop/image-hero-paramour.jpg 1110w, assets/images/home/tablet/image-hero-paramour.jpg 573w, assets/images/home/mobile/image-hero-paramour.jpg 375w"
                     src="assets/images/home/mobile/image-hero-paramour.jpg" alt="picture of a building">
-                  <div class="container">
+                  <div class="grid col-11 offset-1 offset-2@md">
                     <div class="slide__content">
                       <h1>Project Paramour</h1>
                       <p>Project made for an art museum near Southwest London. Project Paramour is
@@ -54,7 +54,7 @@
                   <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
                     srcset="assets/images/home/desktop/image-hero-seraph.jpg 1110w, assets/images/home/tablet/image-hero-seraph.jpg 573w, assets/images/home/mobile/image-hero-seraph.jpg 375w"
                     src="assets/images/home/mobile/image-hero-seraph.jpg" alt="picture of a building">
-                  <div class="container">
+                  <div class="grid col-11 offset-1 offset-2@md">
                     <div class="slide__content">
                       <h1>Seraph Station</h1>
                       <p>The Seraph Station project challenged us to design a unique station that would
@@ -69,7 +69,7 @@
                   <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
                     srcset="assets/images/home/desktop/image-hero-federal.jpg 1110w, assets/images/home/tablet/image-hero-federal.jpg 573w, assets/images/home/mobile/image-hero-federal.jpg 375w"
                     src="assets/images/home/mobile/image-hero-federal.jpg" alt="picture of a building">
-                <div class="container">
+                <div class="grid col-11 offset-1 offset-2@md">
                   <div class="slide__content">
                     <h1>Federal II Tower</h1>
                     <p>A sequel theme project for a tower originally built in the 1800s. We achieved
@@ -84,7 +84,7 @@
                   <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
                     srcset="assets/images/home/desktop/image-hero-trinity.jpg 1110w, assets/images/home/tablet/image-hero-trinity.jpg 573w, assets/images/home/mobile/image-hero-trinity.jpg 375w"
                     src="assets/images/home/mobile/image-hero-trinity.jpg" alt="picture of a building">
-                  <div class="container">
+                  <div class="grid col-11 offset-1 offset-2@md">
                     <div class="slide__content">
                       <h1>Trinity Bank Tower</h1>
                       <p>Trinity Bank challenged us to make a concept for a 84 story building located
