changed to container full width

--- a/main/about.html
+++ b/main/about.html
@@ -129,7 +129,7 @@
   </main>
 
   <footer class="footer">
-    <div class="container container--outer container--outer--full-width container-width@md position-relative">
+    <div class="container container--outer container--full-width container-width@md position-relative">
       <div class="footer__main">
         <div class="footer__logo">
           <img src="assets/images/logo.svg" alt="logo white">
