--- a/main/index.html
+++ b/main/index.html
@@ -32,7 +32,7 @@
     </section>
 
     <header class="header margin-top-menu">
-      <div class="container container--outer container--outer--full-width container-width@sm">
+      <div class="container container--outer container--full-width container-width@sm">
         <div class="header__main position-relative">
           <div class="carousel">
               <div class="slider">
@@ -192,7 +192,7 @@
     </main>
 
   <footer class="footer">
-    <div class="container container--outer container--outer--full-width container-width@md position-relative">
+    <div class="container container--outer container--full-width container-width@md position-relative">
       <div class="footer__main">
         <div class="footer__logo">
           <img src="assets/images/logo.svg" alt="logo white">
