--- a/main/index.html
+++ b/main/index.html
@@ -135,18 +135,19 @@
                   stunning projects that will stand the test of time.</p>
                 </div>
               </div>
-
             </div>
-
           </div>
-
         </section>
 
-        <section class="teams full-width col-content@sm">
-          <div class="container">
-            <div class="teams__content">
-              <h2 class="margin-bottom-md">Small team, big ideas</h2>
-              <a href="about.html" class="btn btn--primary--dark">About Us</a>
+        <section class="teams">
+          <div class="container container--outer container--full-width container-width@sm">
+            <div class="teams__main">
+              <div class="grid col-11 offset-1 offset-2@md">
+                <div class="text-component">
+                <h2>Small team, big ideas</h2>
+                <a href="about.html" class="btn btn--primary--dark">About Us</a>
+                </div>
+              </div>
             </div>
           </div>
         </section>
