--- a/main/index.html
+++ b/main/index.html
@@ -117,42 +117,44 @@
 
     <main class="home flow-content">
 
-        <section class="welcome">
-          <div class="container container--outer">
-            <div class="welcome__main position-relative">
-              <div class="horizontal-line hide@sm"></div>
-              <h1 class="text--huge display@sm">Welcome</h1>
-              <div class="grid offset-2@md">
-                <div class="text-component margin-top-xxl@sm">
-                  <h2>Welcome to Arch Studio</h2>
-                  <p>We have a unique network and skillset to help bring your projects to life. Our
-                  small team of highly skilled individuals combined with our large network put us
-                  in a strong position to deliver exceptional results.</p>
-                  <p>Over the past 10 years, we have worked on all kinds of projects. From stations
-                  to high-rise buildings, we create spaces that inspire and delight.</p>
-                  <p>We work closely with our clients so that we understand the intricacies of each
-                  project. This allows us to work in harmony the surrounding area to create truly
-                  stunning projects that will stand the test of time.</p>
-                </div>
+      <section class="welcome">
+        <div class="container container--outer">
+          <div class="welcome__main position-relative">
+            <div class="horizontal-line hide@sm"></div>
+            <h1 class="text--huge display@sm">Welcome</h1>
+            <div class="grid offset-2@md">
+              <div class="text-component margin-top-xxl@sm">
+                <h2>Welcome to Arch Studio</h2>
+                <p>We have a unique network and skillset to help bring your projects to life. Our
+                small team of highly skilled individuals combined with our large network put us
+                in a strong position to deliver exceptional results.</p>
+                <p>Over the past 10 years, we have worked on all kinds of projects. From stations
+                to high-rise buildings, we create spaces that inspire and delight.</p>
+                <p>We work closely with our clients so that we understand the intricacies of each
+                project. This allows us to work in harmony the surrounding area to create truly
+                stunning projects that will stand the test of time.</p>
               </div>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <section class="teams">
-          <div class="container container--outer container--full-width container-width@sm">
-            <div class="teams__main">
-              <div class="grid col-11 offset-1 offset-2@md">
-                <div class="text-component">
-                <h2>Small team, big ideas</h2>
-                <a href="about.html" class="btn btn--primary--dark">About Us</a>
-                </div>
+      <section class="teams">
+        <div class="container container--outer container--full-width container-width@sm">
+          <div class="teams__main">
+            <div class="grid col-11 offset-1 offset-2@md">
+              <div class="text-component">
+              <h2>Small team, big ideas</h2>
+              <a href="about.html" class="btn btn--primary--dark">About Us</a>
               </div>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <div class="featured">
+      <section class="featured">
+        <div class="container container--outer">
+          <div class="featured__main">
             <h2>Featured</h2>
 
             <div class="project-cards">
@@ -192,10 +194,10 @@
 
             </div>
           <a href="portfolio.html" class="btn btn--primary--dark">See All</a>
+          </div>
+        </div>
+      </section>
 
-        </section>
-
-      </div><!--container outer-->
     </main>
 
   <footer class="footer">
