remove the container--outer from index about pages

--- a/main/about.html
+++ b/main/about.html
@@ -14,7 +14,7 @@
 <body class="about">
 
     <section class="navigation">
-      <div class="container container--outer">
+      <div class="container">
         <div class="overlay hide@sm" aria-hidden="true"></div>
         <div class="nav-bar">
           <a href="/"><img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo"></a>
@@ -31,7 +31,7 @@
 
      <header class="header margin-top-menu">
       <img src="assets/images/about/mobile/image-hero.jpg" class="width-100% block hide@sm" alt="">
-      <div class="container container--outer">
+      <div class="container">
         <h1 class="text--huge display@sm">About</h1>
         <div class="text-component">
           <h2>Your team of professionals</h2>
@@ -49,7 +49,7 @@
     <div class="flow-content">
 
       <section class="heritage">
-        <div class="container container--outer">
+        <div class="container">
           <div class="heritage__main">
             <div class="heritage__content">
               <div class="horizontal-line"></div>
@@ -76,7 +76,7 @@
       </section>
 
       <section class="leaders">
-        <div class="container container--outer">
+        <div class="container">
           <div class="leaders__main">
             <h2 class="margin-bottom-xl">The <br/>Leaders</h2>
             <div class="cards">
@@ -129,7 +129,7 @@
   </main>
 
   <footer class="footer">
-    <div class="container container--outer container--full-width container-width@md position-relative">
+    <div class="container container--full-width container-width@md position-relative">
       <div class="footer__main">
         <div class="footer__logo">
           <img src="assets/images/logo.svg" alt="logo white">
