--- a/main/index.html
+++ b/main/index.html
@@ -16,7 +16,7 @@
       </div> -->
 
     <section class="navigation">
-      <div class="container container--outer">
+      <div class="container">
         <div class="overlay hide@sm" aria-hidden="true"></div>
         <div class="nav-bar">
           <a href="/"><img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo"></a>
@@ -32,7 +32,7 @@
     </section>
 
     <header class="header margin-top-menu">
-      <div class="container container--outer container--full-width container-width@sm">
+      <div class="container container--full-width container-width@sm">
         <div class="header__main position-relative">
           <div class="carousel">
               <div class="slider">
@@ -118,7 +118,7 @@
     <main class="home flow-content">
 
       <section class="welcome">
-        <div class="container container--outer">
+        <div class="container">
           <div class="welcome__main position-relative">
             <div class="horizontal-line hide@sm"></div>
             <h1 class="text--huge display@sm">Welcome</h1>
@@ -140,7 +140,7 @@
       </section>
 
       <section class="teams">
-        <div class="container container--outer container--full-width container-width@sm">
+        <div class="container container--full-width container-width@sm">
           <div class="teams__main">
             <div class="grid col-11 offset-1 offset-2@md">
               <div class="text-component">
@@ -153,7 +153,7 @@
       </section>
 
       <section class="featured">
-        <div class="container container--outer">
+        <div class="container">
           <div class="featured__main">
             <h2>Featured</h2>
 
@@ -201,7 +201,7 @@
     </main>
 
   <footer class="footer">
-    <div class="container container--outer container--full-width container-width@md position-relative">
+    <div class="container container--full-width container-width@md position-relative">
       <div class="footer__main">
         <div class="footer__logo">
           <img src="assets/images/logo.svg" alt="logo white">
