--- a/main/portfolio.html
+++ b/main/portfolio.html
@@ -12,30 +12,30 @@
   </head>
 
   <body>
-    <div class="container-outer">
-
-      <div class="vertical-content display@sm">
+      <!-- <div class="vertical-content display@sm">
         <div class="vertical-content__line"></div>
         <div class="vertical-content__text text-uppercase">Portfolio</div>
-      </div>
+      </div> -->
 
-      <section class="navigation">
+    <section class="navigation">
+      <div class="container">
         <div class="overlay hide@sm" aria-hidden="true"></div>
-        <div class="container width-100%@sm">
-          <div class="nav-bar">
-            <img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo">
-            <nav class="nav" id="nav-items" hidden>
-              <a href="portfolio.html" class="nav-link current">Portfolio</a>
-              <a href="about.html" class="nav-link">About Us</a>
-              <a href="contact.html" class="nav-link">Contact</a>
-            </nav>
-            <button class="nav-icon hide@sm" aria-expanded="false" aria-controls="nav-items"></button>
-          </div>
+        <div class="nav-bar">
+          <a href="/"><img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo"></a>
+          <nav class="nav" id="nav-items" hidden>
+            <a href="portfolio.html" class="nav-link">Portfolio</a>
+            <a href="about.html" class="nav-link">About Us</a>
+            <a href="contact.html" class="nav-link">Contact</a>
+          </nav>
+          <button class="nav-icon hide@sm" aria-expanded="false" aria-controls="nav-items"></button>
         </div>
-      </section>
+      </div>
+      </div>
+    </section>
 
 
     <main class="portfolio margin-top-menu flow-content">
+      <div class="container">
         <div class="project-cards">
 
           <div class="project-card" id="project1">
@@ -159,11 +159,12 @@
           </div>
 
         </div>
+      </div>
+
     </main>
-  </div>
-    <div class="container-outer">
-      <footer class="footer full-width col-content@md">
-        <div class="footer__container">
+    <footer class="footer">
+      <div class="container container--full-width container-width@md position-relative">
+        <div class="footer__main">
           <div class="footer__logo">
             <img src="assets/images/logo.svg" alt="logo white">
           </div>
@@ -174,9 +175,9 @@
           </nav>
           <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
         </div>
-      </footer>
-    </div>
-    <script src="assets/js/scripts.js"></script>
+      </div>
+    </footer>
 
+    <script src="assets/js/scripts.js"></script>
   </body>
 </html>
