add back vertical text

--- a/main/portfolio.html
+++ b/main/portfolio.html
@@ -12,10 +12,11 @@
   </head>
 
   <body>
-      <!-- <div class="vertical-content display@sm">
-        <div class="vertical-content__line"></div>
-        <div class="vertical-content__text text-uppercase">Portfolio</div>
-      </div> -->
+
+    <div class="vertical-content display@sm">
+      <div class="vertical-content__line"></div>
+      <div class="vertical-content__text text-uppercase">Portfolio</div>
+    </div>
 
     <section class="navigation">
       <div class="container">
