verical text component

--- a/main/index.html
+++ b/main/index.html
@@ -10,10 +10,13 @@
     <title>Get Started | CodyFrame</title>
   </head>
   <body>
-      <!-- <div class="vertical-content display@sm">
+
+    <div class="container position-relative">
+      <div class="vertical-content display@sm">
         <div class="vertical-content__line"></div>
-        <div class="vertical-content__text text-uppercase">home</div>
-      </div> -->
+        <div class="vertical-content__text text-uppercase">Home</div>
+      </div>
+    </div>
 
     <section class="navigation">
       <div class="container">
@@ -106,14 +109,8 @@
               <button class="btn btn--number" class="slide-link" data-slide="slide4">04</button>
           </div>
         </div>
-
-
       </div>
-
-
     </header>
-
-
 
     <main class="home flow-content">
 
@@ -197,24 +194,23 @@
           </div>
         </div>
       </section>
-
     </main>
 
-  <footer class="footer">
-    <div class="container container--full-width container-width@md position-relative">
-      <div class="footer__main">
-        <div class="footer__logo">
-          <img src="assets/images/logo.svg" alt="logo white">
+    <footer class="footer">
+      <div class="container container--full-width container-width@md position-relative">
+        <div class="footer__main">
+          <div class="footer__logo">
+            <img src="assets/images/logo.svg" alt="logo white">
+          </div>
+          <nav class="footer__nav">
+            <a href="portfolio.html" class="nav-link">Portfolio</a>
+            <a href="about.html" class="nav-link">About Us</a>
+            <a href="contact.html" class="nav-link">contact</a>
+          </nav>
+          <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
         </div>
-        <nav class="footer__nav">
-          <a href="portfolio.html" class="nav-link">Portfolio</a>
-          <a href="about.html" class="nav-link">About Us</a>
-          <a href="contact.html" class="nav-link">contact</a>
-        </nav>
-        <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
       </div>
-    </div>
-  </footer>
+    </footer>
     <script src="assets/js/scripts.js"></script>
   </body>
 </html>
