--- a/main/portfolio.html
+++ b/main/portfolio.html
@@ -13,10 +13,13 @@
 
   <body>
 
-    <div class="vertical-content display@sm">
-      <div class="vertical-content__line"></div>
-      <div class="vertical-content__text text-uppercase">Portfolio</div>
+    <div class="container position-relative">
+      <div class="vertical-content display@sm">
+        <div class="vertical-content__line"></div>
+        <div class="vertical-content__text text-uppercase">Portfolio</div>
+      </div>
     </div>
+
 
     <section class="navigation">
       <div class="container">
