--- a/main/about.html
+++ b/main/about.html
@@ -1,17 +1,24 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script>document.getElementsByTagName("html")[0].className += " js";</script>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap" rel="stylesheet">
-  <link id="codyframe" rel="stylesheet" href="assets/css/style.css">
-  <title>Get Started | CodyFrame</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>document.getElementsByTagName("html")[0].className += " js";</script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap" rel="stylesheet">
+    <link id="codyframe" rel="stylesheet" href="assets/css/style.css">
+    <title>Get Started | CodyFrame</title>
+  </head>
 
-<body class="about">
+  <body class="about">
+
+    <div class="container position-relative">
+      <div class="vertical-content display@sm">
+        <div class="vertical-content__line"></div>
+        <div class="vertical-content__text text-uppercase">About</div>
+      </div>
+    </div>
 
     <section class="navigation">
       <div class="container">
@@ -43,11 +50,7 @@
       </div>
     </header>
 
-
-
-  <main>
-    <div class="flow-content">
-
+    <main class="flow-content">
       <section class="heritage">
         <div class="container">
           <div class="heritage__main">
@@ -124,26 +127,23 @@
           </div>
         </div>
       </section>
+    </main>
 
-    </div>
-  </main>
-
-  <footer class="footer">
-    <div class="container container--full-width container-width@md position-relative">
-      <div class="footer__main">
-        <div class="footer__logo">
-          <img src="assets/images/logo.svg" alt="logo white">
+    <footer class="footer">
+      <div class="container container--full-width container-width@md position-relative">
+        <div class="footer__main">
+          <div class="footer__logo">
+            <img src="assets/images/logo.svg" alt="logo white">
+          </div>
+          <nav class="footer__nav">
+            <a href="portfolio.html" class="nav-link">Portfolio</a>
+            <a href="about.html" class="nav-link">About Us</a>
+            <a href="contact.html" class="nav-link">contact</a>
+          </nav>
+          <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
         </div>
-        <nav class="footer__nav">
-          <a href="portfolio.html" class="nav-link">Portfolio</a>
-          <a href="about.html" class="nav-link">About Us</a>
-          <a href="contact.html" class="nav-link">contact</a>
-        </nav>
-        <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
       </div>
-    </div>
-  </footer>
-
+    </footer>
   <script src="assets/js/scripts.js"></script>
   </body>
 </html>
