--- a/main/about.html
+++ b/main/about.html
@@ -40,12 +40,13 @@
       <img src="assets/images/about/mobile/image-hero.jpg" class="width-100% block hide@sm" alt="">
       <div class="container">
         <h1 class="text--huge display@sm">About</h1>
-        <div class="text-component">
-          <h2>Your team of professionals</h2>
-          <p>Our small team of world-class professionals will work with you every step of the way.
-             Strong relationships are at the core of everything we do. This extends to the
-             relationship our projects have with their surroundings.
-          </p>
+          <div class="header__content">
+            <div class="horizontal-line"></div>
+            <h2 class="margin-bottom-lg margin-bottom-xxs@md">Your team of professionals</h2>
+            <p>Our small team of world-class professionals will work with you every step of the way.
+              Strong relationships are at the core of everything we do. This extends to the
+              relationship our projects have with their surroundings.
+            </p>
         </div>
       </div>
     </header>
