--- a/main/about.html
+++ b/main/about.html
@@ -42,7 +42,7 @@
         <h1 class="text--huge display@sm">About</h1>
           <div class="header__content">
             <div class="horizontal-line display@sm"></div>
-            <h2 class="margin-bottom-xs">Your team of professionals</h2>
+            <h2>Your team of professionals</h2>
             <p>Our small team of world-class professionals will work with you every step of the way.
               Strong relationships are at the core of everything we do. This extends to the
               relationship our projects have with their surroundings.
