--- a/main/contact.html
+++ b/main/contact.html
@@ -1,57 +1,130 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!doctype html>
+  <html lang="en">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Arch Studio Website Challenge</title>
-</head>
-<body>
+    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <script>document.getElementsByTagName("html")[0].className += " js";</script>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap" rel="stylesheet">
+      <link id="codyframe" rel="stylesheet" href="assets/css/style.css">
+      <title>Get Started | CodyFrame</title>
+    </head>
+    <body class="contact">
 
-  Contact
+      <div class="container position-relative">
+        <div class="vertical-content display@sm">
+          <div class="vertical-content__line"></div>
+          <div class="vertical-content__text text-uppercase">About</div>
+        </div>
+      </div>
 
-  Portfolio
-  About Us
-  Contact
+      <section class="navigation">
+        <div class="container">
+          <div class="overlay hide@sm" aria-hidden="true"></div>
+          <div class="nav-bar">
+            <a href="/"><img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo"></a>
+            <nav class="nav" id="nav-items" hidden>
+              <a href="portfolio.html" class="nav-link">Portfolio</a>
+              <a href="about.html" class="nav-link">About Us</a>
+              <a href="contact.html" class="nav-link">Contact</a>
+            </nav>
+            <button class="nav-icon hide@sm" aria-expanded="false" aria-controls="nav-items"></button>
+          </div>
+        </div>
+        </div>
+      </section>
 
-  Contact
+      <header class="header margin-top-menu">
+        <div class="header__img">
+          <img src="assets/images/contact/mobile/image-hero.jpg" class="width-100% block hide@sm" alt="">
+          <div class="white-box hide@sm"></div>
+        </div>
+        <div class="container">
+          <h1 class="text--huge display@sm">Contact</h1>
+          <div class="header__content">
+            <div class="horizontal-line display@sm"></div>
+            <h2 class="margin-top-md">Tell us about your project</h2>
+            <p class="margin-top-sm">We’d love to hear more about your project. Please, leave a message below or give
+            us a call. We have two offices, one in Texas and one in Tennessee. If you find
+            yourself nearby, come say hello!
+            </p>
+          </div>
+        </div>
+      </header>
 
-  Tell us about your project
+      <main>
+        <section class="contact-details">
+          <div class="container">
+            <div class="horizontal-line"></div>
+            <div class="contact-details__content">
+              <h2 class="margin-bottom-lg">Contact Details</h2>
+              <div class="contact-details__card">
+                <div class="card-title">Main Office</div>
+                <div class="card-body">
+                  <div class="details__type">
+                    <p>Mail:</p>
+                    <p>Address:</p>
+                    <p>Phone:</p>
+                  </div>
+                  <div class="details_info">
+                    <p>archone@mail.com</p>
+                    <p>1892 Chenoweth Drive TN</p>
+                    <p>123-456-3451</p>
+                  </div>
+                </div>
+                <div class="card-footer">
+                  <a href="#">View on Map</a>
+                </div>
+              </div>
 
-  We’d love to hear more about your project. Please, leave a message below or give 
-  us a call. We have two offices, one in Texas and one in Tennessee. If you find 
-  yourself nearby, come say hello!
+              <div class="contact-details__card">
+                <div class="card-title">Office II</div>
+                <div class="card-body">
+                  <div class="details__type">
+                    <p>Mail:</p>
+                    <p>Address:</p>
+                    <p>Phone:</p>
+                  </div>
+                  <div class="details_info">
+                    <p>archtwo@mail.com</p>
+                    <p>3399 Wines Lane TX</p>
+                    <p>832-123-4321</p>
+                  </div>
+                </div>
+                <div class="details__link">
+                  <a href="#">View on Map</a>
+                </div>
+              </div>
+            </div>
+          </div>
+         <img src="assets/images/contact/mobile/image-map.png" alt="map showing offices">
+        </section>
 
-  Contact Details
-
-  Main Office
-  Mail:	archone@mail.com
-  Address: 1892 Chenoweth Drive TN
-  Phone: 123-456-3451
-
-  View on Map
-
-  Office II
-  Mail: archtwo@mail.com
-  Address: 3399 Wines Lane TX
-  Phone: 832-123-4321
-
-  View on Map
-
-  Connect with us
-
-  Name
-  Email
-  Message
-
-
-  Portfolio
-  About Us
-  Contact
-
-  See Our Portfolio
-
-</body>
+        <section class="connect">
+          <form action="#" class="connnect__form">
+            <input type="text" placeholder="Name">
+            <input type="email" name="email" id="email" placeholder="Email">
+            <textarea name="message" id="mesage" cols="30" rows="5" placeholder="Message"></textarea>
+            <button type="submit" class="btn btn--icon"></button>
+          </form>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container container--full-width container-width@md position-relative">
+        <div class="footer__main">
+          <div class="footer__logo">
+            <img src="assets/images/logo.svg" alt="logo white">
+          </div>
+          <nav class="footer__nav">
+            <a href="portfolio.html" class="nav-link">Portfolio</a>
+            <a href="about.html" class="nav-link">About Us</a>
+            <a href="contact.html" class="nav-link">contact</a>
+          </nav>
+          <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
+        </div>
+      </div>
+    </footer>
+    <script src="assets/js/scripts.js"></script>
+  </body>
 </html>
