code the contact details section and map

--- a/main/contact.html
+++ b/main/contact.html
@@ -45,7 +45,7 @@
           <div class="header__content">
             <div class="horizontal-line display@sm"></div>
             <h2 class="margin-top-md">Tell us about your project</h2>
-            <p class="margin-top-sm">We’d love to hear more about your project. Please, leave a message below or give
+            <p class="margin-top-md">We’d love to hear more about your project. Please, leave a message below or give
             us a call. We have two offices, one in Texas and one in Tennessee. If you find
             yourself nearby, come say hello!
             </p>
@@ -54,51 +54,57 @@
       </header>
 
       <main>
-        <section class="contact-details">
+        <section class="contact__details">
           <div class="container">
             <div class="horizontal-line"></div>
-            <div class="contact-details__content">
+            <div class="contact__details__content">
               <h2 class="margin-bottom-lg">Contact Details</h2>
-              <div class="contact-details__card">
-                <div class="card-title">Main Office</div>
-                <div class="card-body">
-                  <div class="details__type">
-                    <p>Mail:</p>
-                    <p>Address:</p>
-                    <p>Phone:</p>
+
+              <div class="contact-card">
+                <div class="contact-card__header">Main Office</div>
+                  <div class="contact-card__body">
+                    <div class="flex margin-y-lg">
+                      <div>
+                        <p>Mail:</p>
+                        <p>Address:</p>
+                        <p>Phone:</p>
+                      </div>
+                      <div class=" margin-left-sm">
+                        <p>archone@mail.com</p>
+                        <p>1892 Chenoweth Drive TN</p>
+                        <p>123-456-3451</p>
+                      </div>
+                    </div>
+                    <a href="#" class="btn btn--primary btn--primary--link">View on Map</a>
                   </div>
-                  <div class="details_info">
-                    <p>archone@mail.com</p>
-                    <p>1892 Chenoweth Drive TN</p>
-                    <p>123-456-3451</p>
-                  </div>
-                </div>
-                <div class="card-footer">
-                  <a href="#">View on Map</a>
                 </div>
               </div>
 
-              <div class="contact-details__card">
-                <div class="card-title">Office II</div>
-                <div class="card-body">
-                  <div class="details__type">
-                    <p>Mail:</p>
-                    <p>Address:</p>
-                    <p>Phone:</p>
+              <div class="contact-card margin-top-xxl">
+                <div class="card-card__header">Office II</div>
+                <div class="card-card__body">
+                  <div class="flex">
+                    <div>
+                      <p>Mail:</p>
+                      <p>Address:</p>
+                      <p>Phone:</p>
+                    </div>
+                    <div class="margin-left-sm">
+                      <p>archtwo@mail.com</p>
+                      <p>3399 Wines Lane TX</p>
+                      <p>832-123-4321</p>
+                    </div>
                   </div>
-                  <div class="details_info">
-                    <p>archtwo@mail.com</p>
-                    <p>3399 Wines Lane TX</p>
-                    <p>832-123-4321</p>
-                  </div>
-                </div>
-                <div class="details__link">
-                  <a href="#">View on Map</a>
+                    <a href="#" class="btn btn--primary btn--primary--link">View on Map</a>
                 </div>
               </div>
+
             </div>
           </div>
-         <img src="assets/images/contact/mobile/image-map.png" alt="map showing offices">
+
+          <div class="contact__map">
+            <img src="assets/images/contact/mobile/image-map.png" alt="map showing offices">
+          </div>
         </section>
 
         <section class="connect">
