add padding to space out text

--- a/main/contact.html
+++ b/main/contact.html
@@ -63,7 +63,7 @@
               <div class="contact-card">
                 <div class="contact-card__header">Main Office</div>
                   <div class="contact-card__body">
-                    <div class="flex margin-y-lg">
+                    <div class="flex info">
                       <div>
                         <p>Mail:</p>
                         <p>Address:</p>
@@ -80,10 +80,10 @@
                 </div>
               </div>
 
-              <div class="contact-card margin-top-xxl">
-                <div class="card-card__header">Office II</div>
-                <div class="card-card__body">
-                  <div class="flex">
+              <div class="contact-card margin-top-xxxl">
+                <div class="contact-card__header">Office II</div>
+                <div class="contact-card__body">
+                  <div class="flex info">
                     <div>
                       <p>Mail:</p>
                       <p>Address:</p>
