complete the mobile layout

--- a/main/contact.html
+++ b/main/contact.html
@@ -108,12 +108,22 @@
         </section>
 
         <section class="connect">
-          <form action="#" class="connnect__form">
-            <input type="text" placeholder="Name">
-            <input type="email" name="email" id="email" placeholder="Email">
-            <textarea name="message" id="mesage" cols="30" rows="5" placeholder="Message"></textarea>
-            <button type="submit" class="btn btn--icon"></button>
-          </form>
+          <div class="container">
+            <h2 class="margin-bottom-lg">Connect <br/>with us</h2>
+
+            <form action="#" class="connect__form">
+              <div class="form__control flow--xxl">
+                <input type="text" placeholder="Name">
+                <input type="email" name="email" id="email" placeholder="Email">
+                <textarea name="message" id="mesage" rows="3" placeholder="Message"></textarea>
+              </div>
+              <div class="form-action">
+                <button type="submit" class="btn btn--icon"></button>
+              </div>
+
+
+            </form>
+          </div>
       </section>
     </main>
     <footer class="footer">
