--- a/main/contact.html
+++ b/main/contact.html
@@ -53,7 +53,7 @@
         </div>
       </header>
 
-      <main>
+      <main class="flow-content">
         <section class="contact__details">
           <div class="container">
             <div class="horizontal-line"></div>
@@ -101,10 +101,10 @@
 
             </div>
           </div>
+        </section>
 
-          <div class="contact__map">
-            <img src="assets/images/contact/mobile/image-map.png" alt="map showing offices">
-          </div>
+        <section class="map">
+          <img src="assets/images/contact/mobile/image-map.png" alt="map showing offices">
         </section>
 
         <section class="connect">
