complete contact details tablet

--- a/main/contact.html
+++ b/main/contact.html
@@ -69,7 +69,7 @@
                         <p>Address:</p>
                         <p>Phone:</p>
                       </div>
-                      <div class=" margin-left-sm">
+                      <div class=" margin-left-sm margin-left-xxl@sm">
                         <p>archone@mail.com</p>
                         <p>1892 Chenoweth Drive TN</p>
                         <p>123-456-3451</p>
@@ -89,7 +89,7 @@
                       <p>Address:</p>
                       <p>Phone:</p>
                     </div>
-                    <div class="margin-left-sm">
+                    <div class="margin-left-sm margin-left-xxl@sm">
                       <p>archtwo@mail.com</p>
                       <p>3399 Wines Lane TX</p>
                       <p>832-123-4321</p>
