add image srcset to display responsive images

--- a/main/contact.html
+++ b/main/contact.html
@@ -104,7 +104,12 @@
         </section>
 
         <section class="map">
-          <img src="assets/images/contact/mobile/image-map.png" alt="map showing offices">
+          <div class="container container--full-width container-width@sm">
+            <img src="assets/images/contact/mobile/image-map.png" alt="map showing offices"
+            sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
+            srcset="assets/images/contact/desktop/image-map.png 1110w, assets/images/contact/tablet/image-map.png 573w, assets/images/contact/mobile/image-map.png 375w">
+          </div>
+
         </section>
 
         <section class="connect">
