complete tablet and desktop for details care

--- a/main/contact.html
+++ b/main/contact.html
@@ -54,15 +54,19 @@
       </header>
 
       <main class="flow-content">
-        <section class="contact__details">
+
+        <section class="details">
           <div class="container">
+
             <div class="horizontal-line"></div>
-            <div class="contact__details__content">
+
+            <div class="details__content">
+
               <h2 class="margin-bottom-lg">Contact Details</h2>
 
-              <div class="contact-card">
-                <div class="contact-card__header">Main Office</div>
-                  <div class="contact-card__body">
+              <div class="details-card">
+                <div class="details-card__header">Main Office</div>
+                  <div class="details-card__body">
                     <div class="flex info">
                       <div>
                         <p>Mail:</p>
@@ -78,11 +82,9 @@
                     <a href="#" class="btn btn--primary btn--primary--link">View on Map</a>
                   </div>
                 </div>
-              </div>
-
-              <div class="contact-card margin-top-xxxl">
-                <div class="contact-card__header">Office II</div>
-                <div class="contact-card__body">
+               <div class="details-card margin-top-xxxl@sm margin-top-0@md">
+                <div class="details-card__header">Office II</div>
+                <div class="details-card__body">
                   <div class="flex info">
                     <div>
                       <p>Mail:</p>
@@ -98,6 +100,9 @@
                     <a href="#" class="btn btn--primary btn--primary--link">View on Map</a>
                 </div>
               </div>
+              </div>
+
+
 
             </div>
           </div>
@@ -105,9 +110,11 @@
 
         <section class="map">
           <div class="container container--full-width container-width@sm">
-            <img src="assets/images/contact/mobile/image-map.png" alt="map showing offices"
-            sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
-            srcset="assets/images/contact/desktop/image-map.png 1110w, assets/images/contact/tablet/image-map.png 573w, assets/images/contact/mobile/image-map.png 375w">
+            <figure>
+              <img src="assets/images/contact/mobile/image-map.png" alt="map showing offices"
+              sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
+              srcset="assets/images/contact/desktop/image-map.png 1110w, assets/images/contact/tablet/image-map.png 573w, assets/images/contact/mobile/image-map.png 375w">
+            </figure>
           </div>
 
         </section>
