complete coding of contact section

--- a/main/contact.html
+++ b/main/contact.html
@@ -121,10 +121,10 @@
 
         <section class="connect">
           <div class="container">
-            <h2 class="margin-bottom-lg">Connect <br/>with us</h2>
-
-            <form action="#" class="connect__form">
-              <div class="form__control flow--xxl">
+            <div class="flex@md">
+              <h2 class="margin-bottom-lg margin-right-xl@md">Connect <br/>with us</h2>
+              <form action="#" class="connect__form">
+              <div class="form__control flow--xl">
                 <input type="text" placeholder="Name">
                 <input type="email" name="email" id="email" placeholder="Email">
                 <textarea name="message" id="mesage" rows="3" placeholder="Message"></textarea>
@@ -134,7 +134,8 @@
               </div>
 
 
-            </form>
+              </form>
+            </div>
           </div>
       </section>
     </main>
