working form with error messages

--- a/main/contact.html
+++ b/main/contact.html
@@ -125,9 +125,15 @@
               <h2 class="margin-bottom-lg margin-right-xl@md">Connect <br/>with us</h2>
               <form action="#" class="connect__form">
               <div class="form__control flow--xl">
-                <input type="text" placeholder="Name">
-                <input type="email" name="email" id="email" placeholder="Email">
-                <textarea name="message" id="mesage" rows="3" placeholder="Message"></textarea>
+                <div class="form__input">
+                  <input type="text" placeholder="Name">
+                </div>
+                <div class="form__input">
+                  <input type="email" name="email" id="email" placeholder="Email">
+                </div>
+                <div class="form__input">
+                  <textarea name="message" id="mesage" rows="3" placeholder="Message"></textarea>
+                </div>
               </div>
               <div class="form-action">
                 <button type="submit" class="btn btn--icon"></button>
