complete error messages for form

--- a/main/contact.html
+++ b/main/contact.html
@@ -123,7 +123,8 @@
           <div class="container">
             <div class="flex@md">
               <h2 class="margin-bottom-lg margin-right-xl@md">Connect <br/>with us</h2>
-              <form action="#" class="connect__form">
+
+              <form action="#" class="connect__form flex-grow@md">
               <div class="form__control flow--xl">
                 <div class="form__input">
                   <input type="text" placeholder="Name">
