--- a/main/contact.html
+++ b/main/contact.html
@@ -64,9 +64,9 @@
 
             <div class="details__content">
 
-              <h2 class="margin-bottom-lg">Contact Details</h2>
+              <h2 class="margin-bottom-lg margin-right-xs">Contact Details</h2>
 
-              <div class="details-card">
+              <div class="details-card margin-bottom-xxxl">
                 <div class="details-card__header">Main Office</div>
                   <div class="details-card__body">
                     <div class="flex info">
