refactor code for map

--- a/main/contact.html
+++ b/main/contact.html
@@ -67,7 +67,7 @@
               <h2 class="margin-bottom-lg margin-right-xs">Contact Details</h2>
 
               <div class="details-card margin-bottom-xxxl">
-                <div class="details-card__header">Main Office</div>
+                <div class="details-card__header" id="mainTitle">Main Office</div>
                   <div class="details-card__body">
                     <div class="flex info">
                       <div>
@@ -81,11 +81,11 @@
                         <p>123-456-3451</p>
                       </div>
                     </div>
-                    <a href="#" class="btn btn--primary btn--primary--link" data-address-id="mainOffice" data-title="Main Office">View on Map</a>
+                    <a href="#" class="btn btn--primary btn--primary--link" data-address-id="mainOffice" data-title-id="mainTitle">View on Map</a>
                   </div>
                 </div>
                <div class="details-card margin-top-xxxl@sm margin-top-0@md">
-                <div class="details-card__header">Office II</div>
+                <div class="details-card__header" id="officeTitle">Office II</div>
                 <div class="details-card__body">
                   <div class="flex info">
                     <div>
@@ -99,7 +99,7 @@
                       <p>832-123-4321</p>
                     </div>
                   </div>
-                    <a href="#" class="btn btn--primary btn--primary--link" data-address-id="officeII" data-title="Office II">View on Map</a>
+                    <a href="#" class="btn btn--primary btn--primary--link" data-address-id="officeII" data-title-id="officeTitle">View on Map</a>
                 </div>
               </div>
               </div>
