cleaned up code on contact page

--- a/main/contact.html
+++ b/main/contact.html
@@ -59,17 +59,15 @@
 
         <section class="details">
           <div class="container">
-
             <div class="horizontal-line"></div>
-
             <div class="details__content">
 
-              <h2 class="margin-bottom-lg margin-right-xs">Contact Details</h2>
+              <h2 class="margin-bottom-lg margin-right-xxs@md">Contact Details</h2>
 
-              <div class="details-card margin-bottom-xxxl">
-                <div class="details-card__header" id="mainTitle">Main Office</div>
+              <div class="details-card">
+                <div class="font-bold" id="mainTitle">Main Office</div>
                   <div class="details-card__body">
-                    <div class="flex info">
+                    <div class="flex padding-y-md margin-right-sm">
                       <div>
                         <p>Mail:</p>
                         <p>Address:</p>
@@ -77,17 +75,17 @@
                       </div>
                       <div class="margin-left-sm margin-left-xxl@sm">
                         <p>archone@mail.com</p>
-                        <p id="mainOffice">1892 Chenoweth Drive TN</p>
+                        <p class="ws-nowrap" id="mainOffice">1892 Chenoweth Drive TN</p>
                         <p>123-456-3451</p>
                       </div>
                     </div>
                     <a href="#" class="btn btn--primary btn--primary--link" data-address-id="mainOffice" data-title-id="mainTitle">View on Map</a>
                   </div>
-                </div>
-               <div class="details-card margin-top-xxxl@sm margin-top-0@md">
-                <div class="details-card__header" id="officeTitle">Office II</div>
+              </div>
+              <div class="details-card margin-top-xxxl margin-top-0@md">
+                <div class="font-bold" id="officeTitle">Office II</div>
                 <div class="details-card__body">
-                  <div class="flex info">
+                  <div class="flex padding-y-md margin-right-sm">
                     <div>
                       <p>Mail:</p>
                       <p>Address:</p>
@@ -102,11 +100,8 @@
                     <a href="#" class="btn btn--primary btn--primary--link" data-address-id="officeII" data-title-id="officeTitle">View on Map</a>
                 </div>
               </div>
-              </div>
-
-
-
             </div>
+
           </div>
         </section>
 
