use br to control look of title

--- a/main/index.html
+++ b/main/index.html
@@ -59,7 +59,7 @@
                   src="assets/images/home/mobile/image-hero-seraph.jpg" alt="picture of a building">
                 <div class="grid col-11 offset-1 offset-2@md">
                   <div class="slide__content">
-                    <h1>Seraph Station</h1>
+                    <h1>Seraph <br> Station</h1>
                     <p>The Seraph Station project challenged us to design a unique station that would
                     transport people through time. The result is a fresh and futuristic model
                     inspired by space stations.</p>
